--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@reduxjs/toolkit": "^2.5.1",
+    "@tanstack/react-table": "^8.21.2",
     "ag-charts-react": "^11.0.4",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
