--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,29 @@ dist-ssr
 cache
 __pycache__
 ML/lecture-summarizer/data
+
+#application
+node_modules/
+.expo/
+dist/
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+# expo router
+expo-env.d.ts
+
+
+
+ios
+android
+
+# macOS
+.DS_Store
+
+# Temporary files created by Metro to check the health of the file watcher
+.metro-health-check*
