--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,11 @@
     "expo-server-sdk": "^3.14.0",
     "express": "^4.21.2",
     "firebase-admin": "^13.1.0",
+    "form-data": "^4.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
